Corrección de errores [CORRECCIONES]  * Se corrigió un error donde el programa no se ejecutaba porque no era    capaz de encontrar los idiomas ya que se usaba la llave equivocada.  * Se corrigió un error donde se indicaba que el modelo no se podía    guardar si no se asignaba una imagen a una característica de    "KeyboardController"incluso cuando no era necesaria.