@@ -23,10 +23,6 @@ jlink ^
   --compress=2 ^
   --no-header-files ^
   --no-man-pages
-@REM jlink ^
-@REM   --module-path "%JAVA_HOME%\jmods;../lib/javafx-sdk-17.0.15/lib" ^
-@REM   --add-modules java.base,java.logging,javafx.base,javafx.graphics,javafx.controls,javafx.fxml ^
-@REM   --output ../build/runtime
 XCOPY "..\lib\bin\*.*" "..\build\runtime\bin\" /D /Y /R
 
 jpackage ^
@@ -39,16 +35,8 @@ jpackage ^
   --java-options "-Dfile.encoding=UTF-8" ^
   --runtime-image ../build/runtime ^
   --icon %ICO% ^
-  --app-version 1.0.0
+  --app-version 1.0.1
 
-@REM jpackage --name %NAME% --app-version 1.0.0 --vendor "UserRulox" ^
-@REM   --input %JAR_DIR% ^
-@REM   --main-jar %JAR% --main-class app.Main ^
-@REM   --java-options "--enable-preview" ^
-@REM   --java-options "-Dfile.encoding=UTF-8" ^
-@REM   --type app-image --icon %ICO% --win-console ^
-@REM   --resource-dir ../bin/res ^
-@REM   --runtime-image ../build/runtime
 MOVE %NAME% %JAR_DIR%
 
 pause
